--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-21  Tor Lillqvist  <tml@iki.fi>
+
+	* fi.po: Remove bogus fuzzies. Add a cute translation for
+	Gee-Slime ;-)
+
 2000-12-20  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation.
