Remove gpb and spheredesigner. Add gih. (Thanks Sven and Jens for cleaning
2000-12-20  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/makefile.mingw.in (COMMON): Remove gpb and
	spheredesigner. Add gih. (Thanks Sven and Jens for cleaning up the
	brush stuff...)

	* libgimp/gimp.def: Add gimp_invert.


Former-commit-id: 5e4ab1a3fc74fe033a6e7f136358c1fac8e3da2d

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-12-20  Tor Lillqvist  <tml@iki.fi>
+
+	* plug-ins/makefile.mingw.in (COMMON): Remove gpb and
+	spheredesigner. Add gih. (Thanks Sven and Jens for cleaning up the
+	brush stuff...)
+
+	* libgimp/gimp.def: Add gimp_invert.
+
 2000-12-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/gimphistogram.c: plonk, my "cleanup" yesterday
