Updated russian translation.
Former-commit-id: 205af3442bb54a14066aa5a23ca5eee4c5ef264f

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-21  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-21  Tor Lillqvist  <tml@iki.fi>
 
 	* fi.po: Remove bogus fuzzies. Add a cute translation for
