--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-21  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation.
+
 2000-12-21  Tor Lillqvist  <tml@iki.fi>
 
 	* fi.po: Update Finnish translation.
