applied gimp-kirchgessner-001220-0 which makes the sunras plug-in
2000-12-21  Sven Neumann  <sven@gimp.org>

        * plug-ins/common/sunras.c: applied gimp-kirchgessner-001220-0
        which makes the sunras plug-in recognize files with the .ras and
        .rs extensions (used by StarOffice and Suns Image Tool).


Former-commit-id: 3c5df05473ce201fb935ae48af599a4fbc16d0b7

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-12-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/sunras.c: applied gimp-kirchgessner-001220-0
+	which makes the sunras plug-in recognize files with the .ras and 
+	.rs extensions (used by StarOffice and Suns Image Tool).
+
+2000-12-21  Sven Neumann  <sven@gimp.org>
+
 	* docs/Wilber_Construction_Kit.xcf.gz: a new hat for Wilber courtesy 
 	of Seth Burgess. 
 
