--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-21  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-21  Tor Lillqvist  <tml@iki.fi>
 
 	* fi.po: Update Finnish translation a bit.
