--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-22  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: Updated Hungarian translation from
+	  Andras TIMAR <timar@gnome.hu>
+	
 2000-12-21  Szabolcs Ban <shooby@gnome.hu>
 
 	* hu.po: Updated Hungarian translation from
