--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-22  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: Added Hungarian translation from
+	  Andras Timar <timar@gnome.hu>
+
 2000-11-25  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
 
 	* ja.po: updated japanese translation.
