Added Hungarian translation
Former-commit-id: ae5e2c2b32b211d8e15984620b123e2f767966c9

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-22  Szabolcs Ban <shooby@gnome.hu>
+
+	* hu.po: added Hungarian translation from
+	  Andras Timar <timar@gnome.hu>
+
 2000-12-21  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
